--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.3.3",
+    "dotenv": "^16.0.3",
+    "dotenv-expand": "^10.0.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
