--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-
-APP_API_KEY='439d4b804bc8187953eb36d2a8c26a02'
-APP_API_PATH='https://openweathermap.org/data/2.5/'
+VITE_API_PATH
+VITE_TOKEN
+VITE_DETAIL_API_PATH
+VITE_DETAIL_API_TOKEN
